--- a/src/testing.ipynb
+++ b/src/testing.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "is_executing": true
+    "ExecuteTime": {
+     "end_time": "2023-06-14T09:46:11.158608Z",
+     "start_time": "2023-06-14T09:46:08.557444Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -19,8 +22,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T20:50:53.931559Z",
-     "start_time": "2023-06-07T20:50:53.928410Z"
+     "end_time": "2023-06-14T09:46:11.161625Z",
+     "start_time": "2023-06-14T09:46:11.159529Z"
     }
    },
    "outputs": [],
@@ -34,8 +37,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-07T20:51:49.956419Z",
-     "start_time": "2023-06-07T20:50:53.932080Z"
+     "end_time": "2023-06-14T09:47:07.263710Z",
+     "start_time": "2023-06-14T09:46:11.162791Z"
     }
    },
    "outputs": [
@@ -57,7 +60,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-06-07T20:51:49.957568Z"
+     "end_time": "2023-06-14T09:52:06.066565Z",
+     "start_time": "2023-06-14T09:47:07.264155Z"
     }
    },
    "outputs": [
@@ -65,63 +69,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting user-item confidence...\n",
-      "Starting PySpark session...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/06/08 00:03:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training ALS model...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/06/08 00:03:47 WARN GarbageCollectionMetrics: To enable non-built-in garbage collector(s) List(G1 Concurrent GC), users should configure it(them) to spark.eventLog.gcMetrics.youngGenerationGarbageCollectors or spark.eventLog.gcMetrics.oldGenerationGarbageCollectors\n",
-      "23/06/08 00:04:07 WARN TaskSetManager: Stage 0 contains a task of very large size (36457 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "23/06/08 00:04:13 WARN PythonRunner: Detected deadlock while completing task 0.0 in stage 0 (TID 0): Attempting to kill Python Worker\n",
-      "23/06/08 00:04:13 WARN TaskSetManager: Stage 1 contains a task of very large size (36457 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "23/06/08 00:04:17 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n",
-      "23/06/08 00:04:17 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.VectorBLAS\n",
-      "23/06/08 00:04:18 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.lapack.JNILAPACK\n",
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Extracting user sessions...\n",
+      "Training model...\n",
       "Done!\n"
      ]
     }
    ],
    "source": [
-    "from models.matrix_factorization_model import MatrixFactorizationRecommender\n",
-    "model = MatrixFactorizationRecommender(dataset)"
+    "from models.word2vec_model import Word2VecRecommender\n",
+    "model = Word2VecRecommender(dataset)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-06-14T09:52:12.252102Z",
+     "start_time": "2023-06-14T09:52:06.068514Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [36:56<00:00, 22.17s/it]                               "
+      "100%|██████████| 100/100 [00:05<00:00, 16.81it/s]"
      ]
     },
     {
@@ -129,12 +102,12 @@
      "output_type": "stream",
      "text": [
       "------------------------------------\n",
-      "Matrix Factorization implicit Recommender - Performance\n",
+      "Word2Vec SG session-based Recommender - Performance\n",
       "------------------------------------\n",
-      "Model setup time: 75.079s\n",
-      "Average time: 22.116s\n",
-      "Worst time: 25.017s\n",
-      "Best time: 21.473s\n"
+      "Model setup time: 296.003s\n",
+      "Average time: 0.003s\n",
+      "Worst time: 0.139s\n",
+      "Best time: 0.001s\n"
      ]
     },
     {
@@ -151,14 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-06-14T09:52:16.975076Z",
+     "start_time": "2023-06-14T09:52:12.253789Z"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [37:01<00:00, 22.22s/it]                               "
+      "100%|██████████| 100/100 [00:04<00:00, 21.24it/s]\n"
      ]
     },
     {
@@ -166,36 +144,31 @@
      "output_type": "stream",
      "text": [
       "------------------------------------\n",
-      "Matrix Factorization implicit Recommender - Validation statistics\n",
+      "Word2Vec SG session-based Recommender - Validation statistics\n",
       "------------------------------------\n",
-      "+--------------+---------+--------+---------+--------+\n",
-      "|    Metric    | Average | Median | Highest | Lowest |\n",
-      "+--------------+---------+--------+---------+--------+\n",
-      "|    MAP@10    |  0.2083 | 0.1056 |  1.0000 | 0.0000 |\n",
-      "|     R@10     |  0.3839 | 0.4643 |  1.0000 | 0.0000 |\n",
-      "| P@10 (HR@10) |  9.60%  | 10.00% |  50.00% | 0.00%  |\n",
-      "|   Rank@10    |  3.1429 | 2.0000 | 10.0000 | 1.0000 |\n",
-      "|  RecRank@10  |  0.3485 | 0.2000 |  1.0000 | 0.0000 |\n",
-      "+--------------+---------+--------+---------+--------+\n",
+      "+------------+---------+--------+---------+--------+\n",
+      "|   Metric   | Average | Median | Highest | Lowest |\n",
+      "+------------+---------+--------+---------+--------+\n",
+      "|   MAP@10   |  0.0011 | 0.0000 |  0.1111 | 0.0000 |\n",
+      "|    R@10    |  0.0033 | 0.0000 |  0.3333 | 0.0000 |\n",
+      "|    P@10    |  0.10%  | 0.00%  |  10.00% | 0.00%  |\n",
+      "|   HR@10    |  1.00%  | 0.00%  | 100.00% | 0.00%  |\n",
+      "|  Rank@10   |  3.0000 | 3.0000 |  3.0000 | 3.0000 |\n",
+      "| RecRank@10 |  0.0033 | 0.0000 |  0.3333 | 0.0000 |\n",
+      "+------------+---------+--------+---------+--------+\n",
       "------------------------------------\n",
-      "Matrix Factorization implicit Recommender - Full statistics\n",
+      "Word2Vec SG session-based Recommender - Full statistics\n",
       "------------------------------------\n",
-      "+--------------+---------+--------+---------+--------+\n",
-      "|    Metric    | Average | Median | Highest | Lowest |\n",
-      "+--------------+---------+--------+---------+--------+\n",
-      "|    MAP@10    |  0.3173 | 0.3022 |  1.0000 | 0.0000 |\n",
-      "|     R@10     |  0.2920 | 0.2792 |  0.6154 | 0.0000 |\n",
-      "| P@10 (HR@10) |  39.40% | 40.00% | 100.00% | 0.00%  |\n",
-      "|   Rank@10    |  1.3261 | 1.0000 |  7.0000 | 1.0000 |\n",
-      "|  RecRank@10  |  0.8214 | 1.0000 |  1.0000 | 0.0000 |\n",
-      "+--------------+---------+--------+---------+--------+\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "+------------+---------+--------+---------+--------+\n",
+      "|   Metric   | Average | Median | Highest | Lowest |\n",
+      "+------------+---------+--------+---------+--------+\n",
+      "|   MAP@10   |  0.0127 | 0.0000 |  0.3000 | 0.0000 |\n",
+      "|    R@10    |  0.0187 | 0.0000 |  0.2857 | 0.0000 |\n",
+      "|    P@10    |  2.30%  | 0.00%  |  40.00% | 0.00%  |\n",
+      "|   HR@10    |  14.00% | 0.00%  | 100.00% | 0.00%  |\n",
+      "|  Rank@10   |  3.1429 | 3.0000 |  9.0000 | 1.0000 |\n",
+      "| RecRank@10 |  0.0748 | 0.0000 |  1.0000 | 0.0000 |\n",
+      "+------------+---------+--------+---------+--------+\n"
      ]
     }
    ],
