chore(test): Update testing files

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "is_executing": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from base.dataset import DataSet\n",
@@ -3376,7 +3374,11 @@
    "source": [
     "from models.word2vec_model import Word2VecRecommender\n",
     "word2vec_model = Word2VecRecommender(\n",
-    "    dataset=dataset\n",
+    "    dataset=dataset,\n",
+    "    min_count=1,\n",
+    "    epochs=100,\n",
+    "    window=300,\n",
+    "    sg=1\n",
     ")"
    ]
   },
